## Process this file with automake to produce Makefile.in

EXTRA_DIST = \
	pyproject.toml \
	README.md \
	codafs/__init__.py \
	codafs/cfs.py \
	codafs/cli/__init__.py \
	codafs/cli/make_certs.py \
	codafs/cli/sync_acls.py \
	codafs/cli/volmunge.py \
	codafs/optional.py \
	codafs/structs.py \
	codafs/util.py \
	codafs/walk.py \
	mkdocs.yml \
	docs/.nav.yml \
	docs/index.md \
	docs/manpages/make_certs.1.md \
	docs/manpages/sync_acls.1.md \
	docs/manpages/volmunge.1.md

clean-local:
	rm -rf build codafs.egg-info dist site
